<resources>
    <string name="app_name">PenZone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_orders">Previous Orders</string>
    <string name="nav_customer">Customer Care</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">search</string>
    <string name="action_logout">Logout</string>
    <string name="Continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_profile"> Profile</string>
    <string name="my_orders"> Orders</string>
    <string name="my_wishlist">WishList</string>

    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="user_not_logged_in">User Not logged In</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">add to WishList</string>
    <string name="quantity">Quantity</string>
    <string name="no_items_to_show">no items to show</string>
    <string name="buy_everything">Buy Everything</string>
    <string name="buy">BUY</string>
    <string name="search_hint">search pen names or brand</string>

</resources>
