<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="Home"
            android:id ="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"/>
        <item
            android:id="@+id/nav_Profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_user"/>
        <item
            android:id="@+id/nav_Orders"
            android:title="@string/my_orders"
            android:icon="@drawable/ic_shopping_cart"/>
        <item
            android:icon="@drawable/ic_favorite"
            android:id="@+id/nav_WishList"
            android:title="@string/my_wishlist" />



    </group>

    <item android:title="">

      <menu>
        <item
        android:icon="@drawable/ic_logout"
        android:id="@+id/nav_logout"
        android:title="@string/logout"/>
        </menu>
    </item>
</menu>
